--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,57 @@
 }
 
 .container{
-    width: 100%;
-    height: 100vh;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header img{
+    width: 50%;
+}
+
+.newToDo input{
+    padding: 10px 20px;
+    border-radius: 10px;
+    border-width: 1px;
+    min-width: 300px;
+    margin-right: 10px;
+}
+
+.newToDo button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border-width: 1px;
+}
+
+.toDos {
+    margin: 40px;
+    border-radius: 10px;
+    background: #F5F7F7;
+    padding: 30px;
+}
+
+.toDos ul {
+    list-style: none;
+}
+
+.todo {
+    border-bottom: 1px solid #DADEE1;
+    padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: center;
+}
+
+.todo:hover {
+    background: white;
+}
+
+.todo i {
+    margin-left: 20px;
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
