--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    padding: 50px;
 }
 
 header img{
@@ -35,6 +36,7 @@ header img{
     border-radius: 10px;
     background: #F5F7F7;
     padding: 30px;
+    width: 50%;
 }
 
 .toDos ul {
@@ -46,16 +48,13 @@ header img{
     padding: 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .todo:hover {
     background: white;
 }
 
-.todo i {
-    margin-left: 20px;
-}
-
-.cursor-pointer {
+.pointer {
     cursor: pointer;
 }
